translationworkflow: fixed a spacing issue in the card for translation requests

--- a/woost/views/resources/styles/TranslationWorkflowRequestCard.css
+++ b/woost/views/resources/styles/TranslationWorkflowRequestCard.css
@@ -1,4 +1,8 @@
 
+.BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_state_label {
+    margin-right: 0 !important;
+}
+
 .BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_state_label,
 .BackOfficeLayout .TranslationWorkflowRequestCard .translation_workflow_request_assigned_translator_label {
     color: #666;
